--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: flutter_scalable_ocr
 description: Flutter scalable OCR package is a wrapper around google_mlkit_text_recognition where you can partialy select part of camera which text will be processed of.
-version: 2.0.0
-homepage: https://github.com/vbalagovic/flutter_scalable_ocr.git
+version: 2.1.0
+homepage: https://github.com/Mahfa/flutter_scalable_ocr
+publish_to: https://dart.cloudsmith.io/mizban-ocjj/common/
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -11,9 +12,8 @@ dependencies:
   camera: ^0.11.0+2
   flutter:
     sdk: flutter
-  google_mlkit_commons: ^0.7.1
-  google_mlkit_text_recognition: ^0.13.0
-  # satya_textocr: ^0.0.2
+  google_mlkit_commons: ^0.9.0
+  google_mlkit_text_recognition: ^0.14.0
 
 dev_dependencies:
   flutter_test:
